--- a/pages/add_value_detail.html
+++ b/pages/add_value_detail.html
@@ -1,73 +1,81 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 儲值記錄明細</title>
-  </head>
-  <body>
-    <!-- title -->
-    <div class="title d-flex container-fluid bg-dark text-white">
-        <a class="col-4 d-block text-white text-decoration-none" href="add_value_history.html"><img class="rotateY" src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
-        <div class="col-4 text-nowrap"><h2 class="fs-5 mb-0 text-center">儲值記錄明細</h2></div>
-    </div><!-- title end -->
-    <div class="container">
-        <!-- 資訊 -->
-        <div class="card bg-secondary w-100 mb-2" style="width: 18rem;">
-            <div class="card-body">
-            <form>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">狀態</label>
-                    <div class="col-9">
-                        <input type="text" readonly class="form-control-plaintext text-primary fs-7" id="staticEmail" value="待付款">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">訂單編號</label>
-                    <div class="col-9 position-relative">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="6741648550004386">
-                        <a class="edit fs-7" href="name_edit.html">複製</a>
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">建立時間</label>
-                    <div class="col-9">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="2022-03-29 18:33:24">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">儲值點數</label>
-                    <div class="col-9">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="1,000">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">手續費</label>
-                    <div class="col-9">
-                        <input type="number" readonly class="form-control-plaintext fs-7" id="staticEmail" value="0">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">儲值方式</label>
-                    <div class="col-9">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="超商儲值">
-                    </div>
-                </div>
-                <div class="row px-0 mx-1">
-                    <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">備註</label>
-                    <div class="col-9">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="- -">
-                    </div>
-                </div>
-            </form>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>HOMIE - 儲值記錄明細</title>
+</head>
+
+<body>
+  <!-- title -->
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
+    <a class="back-icon" href="add_value_history.html"><img src="../assets/img/arrow_right_gray.svg"
+        alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      儲值記錄明細
+    </h2>
+  </div>
+  <!-- title end -->
+  <div class="container pb-5">
+    <!-- 資訊 -->
+    <div class="card mt-2 w-100 mb-5" style="width: 18rem;">
+      <div class="card-body">
+        <form>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">狀態</label>
+            <div class="col-9">
+              <input type="text" readonly class="form-control-plaintext text-primary fs-7" id="staticEmail" value="待付款">
             </div>
-        </div>
-        <!-- 資訊 end-->
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">訂單編號</label>
+            <div class="col-9 position-relative">
+              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="6741648550004386">
+              <a class="edit fs-7" href="#">複製</a>
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">建立時間</label>
+            <div class="col-9">
+              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail"
+                value="2022-03-29 18:33:24">
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">儲值點數</label>
+            <div class="col-9">
+              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="1,000">
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">手續費</label>
+            <div class="col-9">
+              <input type="number" readonly class="form-control-plaintext fs-7" id="staticEmail" value="0">
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">儲值方式</label>
+            <div class="col-9">
+              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="超商儲值">
+            </div>
+          </div>
+          <div class="row px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-7 text-muted">備註</label>
+            <div class="col-9">
+              <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="- -">
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
-    <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  </body>
+    <!-- 資訊 end-->
+  </div>
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
